<resources>
    <string name="app_name">MyAplikasiTA</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="hello_sign_in_your_account">Hello, Sign in Your Account</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_field_your_email">Please field your email</string>
    <string name="please_use_valid_email">Please use valid email</string>
    <string name="please_field_your_password">Please field your password</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="client">Client</string>
    <string name="default_text" translatable="false">-</string>
    <string name="profile">Profile</string>
</resources>