<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:id="@+id/image_view_bg_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_icon_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo_circle"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_bg_login"
        app:layout_constraintTop_toTopOf="@+id/image_view_bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/image_view_bg_login">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline_login"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline_login"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/darker_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="14dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="Forgot Password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/login"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>