<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".fragments.ProfilFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:title="@string/profile"
            app:titleTextColor="@android:color/white"
            app:elevation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:background="@drawable/bg_profile_corner">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="8dp"
                    android:layout_marginTop="16dp">

                    <TableRow>

                        <ImageButton
                            android:id="@+id/ib_person"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_person_24"
                            app:tint="@color/grayDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:text="Edit Profil" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="8dp"
                    android:layout_marginTop="16dp">

                    <TableRow>

                        <ImageButton
                            android:id="@+id/ib_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_email_24"
                            app:tint="@color/grayDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:text="@string/email" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="8dp"
                    android:layout_marginTop="16dp">

                    <TableRow>

                        <ImageButton
                            android:id="@+id/ib_logout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_logout_24"
                            app:tint="@color/grayDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:text="Logout" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="8dp"
                    android:layout_marginTop="16dp">

                    <TableRow>

                        <ImageButton
                            android:id="@+id/ib_tentang"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_info_24"
                            app:tint="@color/grayDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:text="Tentang" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>